--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,12 @@ futures = "0.3"
 log = "0.4"
 env_logger = "0.9"
 dotenv = "0.15"
-tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
+tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] } # Объединили фичи здесь
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.0", features = ["serde", "v4"] }
 bcrypt = "0.14"
 ipnetwork = "0.20"
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde"] } # Убрали дублирование chrono
 bytes = "1"
 validator = "0.16"
